crates/wac-parser/tests/resolution/fail/duplicate-world-item.wac
world w {
    import x: func();
    export x: func();
}